[package]
name = "ferrite"
version = "0.1.0"
edition = "2024"

[features]
fastrand = ["dep:fastrand"]
reqwest = ["dep:reqwest"]
axum = ["dep:axum"]
image = ["dep:image"]
image-codecs = ["image/jpeg", "image/png"]

[dependencies]
fastrand = { version = "2.3.0", optional = true }
reqwest = { version = "0.12.12", optional = true, features = ["blocking"] }
axum = { version = "0.8.1", features = ["macros"], optional = true }
image = { version = "0.25.5", default-features = false, features = ["rayon"], optional = true }